# CMDreader

./: README.md
novel-reader/: README.md  pyproject.toml
novel-reader/novel_reader.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
novel-reader/reader/: bookmark.py  cli.py  display.py  parser.py  taskbar.py
