[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "novel-reader"
version = "0.1.0"
description = "A terminal novel reader"
requires-python = ">=3.8"
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12",
]

[project.scripts]
novel = "reader.cli:main"

[tool.setuptools.packages.find]
where = ["."]
